--- a/a3/a3-webapp/pom.xml
+++ b/a3/a3-webapp/pom.xml
@@ -91,6 +91,16 @@
 				<artifactId>a3-intf</artifactId>
 				<version>${project.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-pool2</artifactId>
+				<version>2.0</version>
+			</dependency>
+			<dependency>
+	            <groupId>redis.clients</groupId>
+	            <artifactId>jedis</artifactId>
+	            <version>2.4.2</version>
+	        </dependency>
 		</dependencies>
 	</dependencyManagement>
 
@@ -188,6 +198,14 @@
 			<groupId>org.jolokia</groupId>
 			<artifactId>jolokia-core</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-pool2</artifactId>
+		</dependency>
+		<dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+        </dependency>
 
 		<!-- Testing Dependencies -->
 		<dependency>
