--- a/a3/a3-webapp/src/main/resources/application.properties
+++ b/a3/a3-webapp/src/main/resources/application.properties
@@ -2,3 +2,8 @@
 spring.redis.host=10.155.100.17
 spring.redis.port=6379
 spring.redis.port.max-active=8
+
+spring.rabbitmq.host=10.155.100.17
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
