--- a/a3/a3-webapp/src/main/resources/application.properties
+++ b/a3/a3-webapp/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.rabbitmq.host=10.155.100.17
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+
+
+A3.disconnection.interval=60000;
