--- a/a3/a3-webapp/src/main/resources/application.properties
+++ b/a3/a3-webapp/src/main/resources/application.properties
@@ -8,5 +8,6 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
-
-A3.disconnection.interval=60000;
+#TimeUnit second
+A3.connection.timeout=60
+A3.status.scan.corn=*/10 * * * * ?
